--- a/views/visit.erb
+++ b/views/visit.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="select">
     <select name="parik">
-      <option selected="selected">Выбирете парикмахера..</option>
+      <option selected>Выбирете парикмахера..</option>
       <option value="Whalter White">Whalter White</option>
       <option value="Jessy Pinkman">Jessy Pinkman</option>
       <option value="Gus Fing">Gus Fing</option>
