--- a/views/visit.erb
+++ b/views/visit.erb
@@ -29,7 +29,7 @@
   <div class="form-group"> 
     <label class="col-sm-2 control-label">Цвет краски</label>
     <div class="col-sm-10">
-    <select name="colorpicker">
+    <select name="color">
     <option value="#7bd148">Green</option>
     <option value="#5484ed">Bold blue</option>
     <option value="#a4bdfc">Blue</option>
