--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,8 @@
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 		<script src="jquery.simplecolorpicker.js"></script>
 		<link rel="stylesheet" href="jquery.simplecolorpicker.css">
-
+		<script src="jquery.datetimepicker.js"></script>
+		<link rel="stylesheet" type="text/css" href="jquery.datetimepicker.css"/>
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -40,6 +41,8 @@
 						<li><a href="/visit">Записаться</a></li>
 						<li><a href="/contacts">Контакты</a></li>
 						<li><a href="/login">Войти</a></li>
+						<li><a href="/showuser">Список клиентов</a></li>
+						
 			  </div><!--/.nav-collapse -->
 			</nav>
 
