Init barbers tables or configure

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -26,7 +26,7 @@ $(function() {
   </div>
   <div class="select">
     <select name="parik">
-      <option selected>Выбирете парикмахера..</option>
+      <option selected disabled>Выбирете парикмахера..</option>
       <option value="Whalter White">Whalter White</option>
       <option value="Jessy Pinkman">Jessy Pinkman</option>
       <option value="Gus Fing">Gus Fing</option>
