--- a/views/visit.erb
+++ b/views/visit.erb
@@ -27,9 +27,11 @@ $(function() {
   <div class="select">
     <select name="parik">
       <option selected disabled>Выбирете парикмахера..</option>
-      <option value="Whalter White">Whalter White</option>
-      <option value="Jessy Pinkman">Jessy Pinkman</option>
-      <option value="Gus Fing">Gus Fing</option>
+
+        <% @barbers.each do |barber| %>
+         <option <%= @parik == barber['name'] ? 'selected': '' %>><%= barber['name']%></option>
+        <% end %> 
+
     </select>
   </div>   
   <div class="form-group"> 
